--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ ftc_app-master/.idea/workspace.xml
 ftc_app-master/.idea/misc.xml
 ftc_app-master/.idea/misc.xml
 ftc_app-master/.idea/workspace.xml
+*.xml
