--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
-ftc_app-master/.idea/**
-ftc_app-master/.gradle/**
-*.xml
-*.bin
-*.json
-*.properties
-*.aar
-*.txt
-*.dex
-ftc_app-master/TeamCode/build/**
+ftc_app-master/.idea/
+ftc_app-master/.gradle/
+ftc_app-master/TeamCode/build/
