--- a/ftc_app-3.5/TeamCode/build.gradle
+++ b/ftc_app-3.5/TeamCode/build.gradle
@@ -18,7 +18,7 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     compile project(':openCVLibrary320')
     compile project(':endercv')
 }
