--- a/ftc_app-3.5/TeamCode/build.gradle
+++ b/ftc_app-3.5/TeamCode/build.gradle
@@ -22,3 +22,8 @@ dependencies {
     compile project(':openCVLibrary320')
     compile project(':endercv')
 }
+kotlin {
+    experimental {
+        coroutines "enable"
+    }
+}
